--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="#aboutUs">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
