--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               <a class="nav-link" href="#">Services</a>
             </li>
           </ul>
-          <span class="navbar-text"> If you build it, they will come. </span>
+          <span id="navQuote" class="navbar-text"> If you build it, they will come. </span>
         </div>
       </div>
     </nav>
 
     <!--bootstrap carousel-->
-
+  <div id="myCaro">
     <div
       id="carouselExampleIndicators"
       class="carousel slide"
@@ -80,8 +80,6 @@
           aria-label="Slide 3"
         ></button>
       </div>
-      <div class="row">
-        <div class="col-xl-6 mx-auto">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./images/code.jpg" class="d-block w-100" alt="..." />
@@ -91,7 +89,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./images/comp.jpg" class="d-block w-100" alt="..." />
+              <img src="./images/comp.jpg" class="d-block w-100 " alt="..." />
             </div>
             <div class="carousel-item">
               <img src="./images/passion.jpg" class="d-block w-100" alt="..." />
@@ -116,9 +114,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
-    </div>
-
+  </div>
     <!--Quote section-->
 
     <div id="webDesignQuote" class="row">
@@ -148,10 +144,9 @@
       </div>
       <div id="usPhotos" class="container">
         <div class="row">
-            <div class="col-lg-6 ">
+            <div class="col-lg-3 mx-auto">
                 <div class="card">
-                    <img class="card-img-top" src="./images/henry.jpg" alt="">
-  
+                    <img class="card-img-top" src="./images/henry.jpg" alt="Henry Aviles">
                     <div class="card-body">
                         <h5 class="card-title">Henry Aviles</h5>
                         <p class="card-text">
@@ -160,10 +155,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mb-4">
+            <div class="col-lg-3 mx-auto ">
                 <div class="card">
-                    <img class="card-img-top" src="./images/moose.jpg" alt="">
-
+                    <img class="card-img-top" src="./images/moose.jpg" alt="Moose Aviles">
                     <div class="card-body">
                         <h5 class="card-title">Moose</h5>
                         <p class="card-text">
@@ -176,5 +170,15 @@
         </div>
     </div>
     </div>
+
+    <div id="designed" class="row">
+      <div class="col-xl-4 mx-auto my-5">
+        <h2>
+          This site was designed with Bootstrap</h2>
+        </div>
+        <img src="./images/bootstrap.png" alt="bootstrap logo">
+      </div>
+    </div>
+
   </body>
 </html>
