Changed theme/Removed Bootstrap logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="#">Services</a>
             </li>
           </ul>
-          <span id="navQuote" class="navbar-text"> If you build it, they will come. </span>
+          <span id="navQuote" class="navbar-text text-primary"> If you build it, they will come. </span>
         </div>
       </div>
     </nav>
@@ -143,8 +143,8 @@
         </p>
       </div>
       <div id="usPhotos" class="container">
-        <div class="row">
-            <div class="col-lg-3 mx-auto">
+        <div class="row justify-content-md-center">
+            <div class="col-lg-4 ">
                 <div class="card">
                     <img class="card-img-top" src="./images/henry.jpg" alt="Henry Aviles">
                     <div class="card-body">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mx-auto ">
+            <div class="col-lg-4">
                 <div class="card">
                     <img class="card-img-top" src="./images/moose.jpg" alt="Moose Aviles">
                     <div class="card-body">
@@ -169,15 +169,6 @@
             </div>
         </div>
     </div>
-    </div>
-
-    <div id="designed" class="row">
-      <div class="col-xl-4 mx-auto my-5">
-        <h2>
-          This site was designed with Bootstrap</h2>
-        </div>
-        <img src="./images/bootstrap.png" alt="bootstrap logo">
-      </div>
     </div>
 
   </body>
